# DREAMPlace

./: .gitignore  .gitmodules  BEYONDPPA_CHANGES.md  CMakeLists.txt  Dockerfile  Dockerfile.mac  Include.mk  LICENSE  Makefile  README.md  plan.md  requirements.txt  run_mac.sh
dreamplace/ops/: CMakeLists.txt  Makefile  __init__.py  tmp.sh
dreamplace/ops/abacus_legalize/: CMakeLists.txt  abacus_legalize.py  setup.py.in
dreamplace/ops/adjust_node_area/: CMakeLists.txt  adjust_node_area.py  setup.py.in
dreamplace/ops/dct/: CMakeLists.txt  Makefile  __init__.py  dct.py  dct2_fft2.py  dct_lee.py  discrete_spectral_transform.py  naive.py  setup.py  setup.py.in  torch_fft_api.py
dreamplace/ops/density_balance/: density_balance.py
dreamplace/ops/density_map/: CMakeLists.txt  density_map.py  setup.py.in
dreamplace/ops/density_overflow/: CMakeLists.txt  Makefile  __init__.py  density_overflow.py  setup.py  setup.py.in
dreamplace/ops/density_potential/: CMakeLists.txt  Makefile  __init__.py  density_potential.py  setup.py  setup.py.in
dreamplace/ops/draw_place/: .gitignore  CMakeLists.txt  Makefile  PlaceDrawer.py  __init__.py  draw_place.py  setup.py  setup.py.in
dreamplace/ops/dump_boxes/: CMakeLists.txt  dump_boxes.py  setup.py.in
dreamplace/ops/electric_potential/: CMakeLists.txt  Makefile  __init__.py  electric_overflow.py  electric_potential.py  electric_potential_backup.py  electric_potential_new.py  setup.py  setup.py.in
dreamplace/ops/fence_region/: CMakeLists.txt  fence_region.py  figures.py
dreamplace/ops/gift_init/: CMakeLists.txt  README.md  gift_init.py  main.py  main_gpu.py
dreamplace/ops/global_swap/: .gitignore  CMakeLists.txt  __init__.py  global_swap.py  setup.py.in
dreamplace/ops/greedy_legalize/: CMakeLists.txt  Makefile  __init__.py  greedy_legalize.py  setup.py  setup.py.in
dreamplace/ops/hpwl/: CMakeLists.txt  Makefile  __init__.py  hpwl.py  setup.py  setup.py.in
dreamplace/ops/independent_set_matching/: .gitignore  CMakeLists.txt  independent_set_matching.py  setup.py.in
dreamplace/ops/io_keepout/: io_keepout.py
dreamplace/ops/k_reorder/: .gitignore  CMakeLists.txt  k_reorder.py  setup.py.in
dreamplace/ops/legality_check/: CMakeLists.txt  legality_check.py  setup.py.in
dreamplace/ops/logsumexp_wirelength/: CMakeLists.txt  Makefile  __init__.py  logsumexp_wirelength.py  setup.py  setup.py.in
dreamplace/ops/macro_alignment/: macro_alignment.py
dreamplace/ops/macro_legalize/: CMakeLists.txt  macro_legalize.py  setup.py.in
dreamplace/ops/ml_congestion/: CMakeLists.txt  __init__.py  gpdl.py  ml_congestion.py
dreamplace/ops/move_boundary/: CMakeLists.txt  Makefile  __init__.py  move_boundary.py  setup.py  setup.py.in
dreamplace/ops/nctugr_binary/: CMakeLists.txt  nctugr_binary.py
dreamplace/ops/notch_penalty/: notch_penalty.py
dreamplace/ops/pin_pos/: CMakeLists.txt  __init__.py  pin_pos.py  setup.py.in
dreamplace/ops/pin_utilization/: CMakeLists.txt  __init__.py  pin_utilization.py  setup.py.in
dreamplace/ops/pin_weight_sum/: CMakeLists.txt  pin_weight_sum.py
dreamplace/ops/place_io/: Makefile  (+5 more)
test/: CMakeLists.txt  simple.json
test/dac2012/: superblue11.json  superblue12.json  superblue14.json  superblue16.json  superblue19.json  superblue2.json  superblue3.json  superblue6.json  superblue7.json  superblue9.json
test/iccad2014/: b19.json  leon2.json  leon3mp.json  mgc_edit_dist.json  mgc_matrix_mult.json  netcard.json  vga_lcd.json
test/iccad2015/: simple.json  superblue1.json  superblue10.json  superblue16.json  superblue18.json  superblue3.json  superblue4.json  superblue5.json  superblue7.json
test/iccad2015.hs/: README.md  simple.json  superblue1.json  superblue10.json  superblue16.json  superblue18.json  superblue3.json  superblue4.json  superblue5.json  superblue7.json
test/iccad2015.ot/: README.md  superblue1.json  superblue10.json  superblue16.json  superblue18.json  superblue3.json  superblue4.json  superblue5.json  superblue7.json
test/ispd2005/: adaptec1.json  adaptec2.json  adaptec3.json  adaptec4.json  bigblue1.json  bigblue2.json  bigblue3.json  bigblue4.json
test/ispd2005free/: adaptec1_allfree.json  adaptec2_allfree.json  adaptec3_allfree.json  adaptec4_allfree.json  bigblue1_allfree.json  bigblue2_allfree.json  bigblue3_allfree.json  bigblue4_allfree.json
test/ispd2019/: ispd19_test1.json  ispd19_test10.json  ispd19_test2.json  ispd19_test3.json  ispd19_test4.json  ispd19_test5.json  ispd19_test6.json  ispd19_test7.json  ispd19_test8.json  ispd19_test9.json
test/mlcong/: mgc_des_perf_a.json  mgc_des_perf_b.json  mgc_edit_dist_a.json  mgc_fft_a.json  mgc_fft_b.json  mgc_matrix_mult_a.json  mgc_matrix_mult_b.json  mgc_matrix_mult_c.json  mgc_pci_bridge32_a.json  mgc_pci_bridge32_b.json  mgc_superblue11_a.json  mgc_superblue12.json  mgc_superblue14.json  mgc_superblue16_a.json  mgc_superblue19.json
test/mms/: adaptec1.json  adaptec2.json  adaptec3.json  adaptec4.json  adaptec5.json  bigblue1.json  bigblue2.json  bigblue3.json  bigblue4.json  newblue1.json  newblue2.json  newblue3.json  newblue4.json  newblue5.json  newblue6.json  newblue7.json
test/placedb/: sample.json
unitest/ops/: .gitignore  CMakeLists.txt  adjust_node_area_unittest.py  dct_electric_potential.py  dct_electric_potential_unitest.py  dct_unitest.py  density_overflow_unitest.py  density_potential_unitest.py  draw_place_unitest.py  electric_potential_unitest.py  greedy_legalize_unitest.py  hpwl_unitest.py  logsumexp_wirelength_unitest.py  move_boundary_unitest.py  pin_pos_unitest.py  pin_utilization_unittest.py  place_io_unitest.py  rmst_wl_unitest.py  rudy_unittest.py  weighted_average_wirelength_unitest.py
unittest/ops/: CMakeLists.txt  adjust_node_area_unittest.py  density_overflow_unittest.py  electric_potential_unittest.py  hpwl_unittest.py  logsumexp_wirelength_unittest.py  pin_pos_unittest.py  pin_rudy_unittest.py  pin_utilization_unittest.py  pinrudy_unittest.py  rmst_wl_unittest.py  rudy_unittest.py  torch_fft_unittest.py  weighted_average_wirelength_unittest.py
unittest/regression/: CMakeLists.txt
(+574 files in other folders)
