install(
  DIRECTORY ispd2005 DESTINATION unittest/regression
    )

install(
  DIRECTORY ispd2015 DESTINATION unittest/regression
    )

install(
  DIRECTORY ispd2018 DESTINATION unittest/regression
    )

install(
  DIRECTORY ispd2019 DESTINATION unittest/regression
    )

install(
  DIRECTORY iccad2014 DESTINATION unittest/regression
    )

install(
  DIRECTORY iccad2015.ot DESTINATION unittest/regression
    )

